# code_to_prompt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/code_to_prompt/: __init__.py  cli.py  engine.py
tests/: __init__.py  test_cli.py  test_engine.py
