[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-to-prompt"
version = "0.1.0"
description = "CLI tool to convert code folders into a single text file for LLM prompts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Neha Nambiar", email = "neha.nambiar.1204@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/neha-nambiar/code_to_prompt"
Repository = "https://github.com/neha-nambiar/code_to_prompt"

[project.scripts]
code-to-prompt = "code_to_prompt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_to_prompt"]
